2006-11-15  Yves Combe  <yves@ycombe.net>

	Play loop item/groups.
	Mute item/groups.

	* src/gc_sound/ChangeLog:
	* src/gc_sound/src/gc-sound-channel.gob:
	* src/gc_sound/src/gc-sound-item.gob:
	* src/gc_sound/src/test_gc_sound.c: (main):

2006-11-14  Yves Combe  <yves@ycombe.net>

	Play groups of music.

	* src/Makefile.am:
	* src/gc_sound/ChangeLog:
	* src/gc_sound/src/gc-sound-channel.gob:
	* src/gc_sound/src/gc-sound-item.gob:
	* src/gc_sound/src/gc-sound-mixer.gob:
	* src/gc_sound/src/test_gc_sound.c: (finish), (start), (main):

2006-11-14  Yves Combe  <yves@ycombe.net>

	initial import of library for sound object gc_sound. Not yet integrated.

	* src/Makefile.am:
	* src/gc_sound/COPYING:
	* src/gc_sound/ChangeLog:
	* src/gc_sound/INSTALL:
	* src/gc_sound/Makefile.am:
	* src/gc_sound/aclocal.m4:
	* src/gc_sound/compile:
	* src/gc_sound/config.guess:
	* src/gc_sound/config.sub:
	* src/gc_sound/configure.in:
	* src/gc_sound/install-sh:
	* src/gc_sound/ltmain.sh:
	* src/gc_sound/missing:
	* src/gc_sound/src/Makefile.am:
	* src/gc_sound/src/gc-sound-channel.gob:
	* src/gc_sound/src/gc-sound-item.gob:
	* src/gc_sound/src/gc-sound-mixer.gob:
	* src/gc_sound/src/gc-sound.h:
	* src/gc_sound/src/test_gc_sound.c: (finish), (main):

2006-11-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/properties.c: (gc_prop_config_file_get),
	(gc_prop_new): changed to no more use open. open is not portable
	and it fails to open file with utf8 characters on windows.

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- By Miguel DE IZARRA, added a 2 player mode in connect4.

	* boards/Makefile.am:
	* boards/connect4-2players.xml.in:
	* boards/connect4.xml.in:
	* po/POTFILES.in:
	* src/boards/python/connect4.py:

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/menu.c: (_add_xml_to_data): no more save translated text in the base.
	 save the english version instead.

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
