@@ -37,7 +37,7 @@ requires 2.0.0
 #endif
 
 #include "gc-sound-channel-private.h"
-
+#include "gc-sound-item-private.h"
 %}
 
 %h{
@@ -48,8 +48,18 @@ requires 2.0.0
 %{
 static GHashTable *channels_table = NULL;
 %}
+
+enum GC_SOUND {
+     POLICY_NONE,
+     PLAY_ONLY_IF_IDLE,
+     PLAY_AFTER_CURRENT,
+     INTERRUPT_AND_PLAY
+} GC:Sound:Policy;
+
 class GC:Sound:Channel from G:Object {
   public gchar *nick = {NULL};
+
+  /* channel is the mixer channel number we use */
   private int channel
   destroy {
     g_hash_table_remove(channels_table, GINT_TO_POINTER(channel));
@@ -59,11 +69,6 @@ class GC:Sound:Channel from G:Object {
       channels_table = NULL;
     }
   };
-  property INT channel
-         (nick = _("Short nickname"),
-          blurb = _("Long description"),
-          minimum = 0, export)
-        get { g_value_set_int (VAL, self->_priv->channel); };
 
   private gboolean initialised = {FALSE};
 
@@ -71,16 +76,25 @@ class GC:Sound:Channel from G:Object {
   private GC:Sound:Item *playing_item = { NULL };
   private G:List *playing_root = { NULL }; 
   private G:List *play_list = { NULL };
-  private gulong signal_id_child = { 0 };
 
+  /* the default volume for the channel */
   private int volume = { MIX_MAX_VOLUME };
-
   property INT volume
      ( nick= _("Channel volume"),
-       blurb= _("Volume max of the channel"),
+       blurb= _("Default volume of the channel"),
        export,
        link);
 
+  /* The default policy for the channel */
+  private GCSoundPolicy policy = {GC_SOUND_PLAY_AFTER_CURRENT};
+  property ENUM policy
+      ( nick = _("Channel policy"),
+        blurb = _("Default policy for this channel"),
+        enum_type = GC:Sound:Policy,
+        export, link);
+
+  /* the mixer we are attached on */
+  /* The mixer initalise SDL and audio */
   private GC:Sound:Mixer *mixer = { NULL }
   destroywith g_object_unref ;  
 
@@ -96,6 +110,7 @@ class GC:Sound:Channel from G:Object {
               Mix_AllocateChannels(self->_priv->mixer->channels );
 
                g_warning("Channel #%d initialised", self->_priv->channel);
+		 Mix_HaltChannel(self->_priv->channel);
 
                g_hash_table_insert(channels_table, &(self->_priv->channel), self);
 
@@ -110,15 +125,17 @@ class GC:Sound:Channel from G:Object {
   private GC:Sound:Item *rootItem = { NULL }
   destroywith g_object_unref;
 
-  property OBJECT rootItem 
+  property OBJECT rootItem
      (nick = _("GCompris Sound Item root"),
       blurb = _("GCompris Sound Item root"),
       object_type=GC:Sound:Item,
       export, link)
        ;
 
+  private gboolean stopped = { FALSE };
+
   init (self)  {
-    g_warning("gc channel instance init"); 
+    //g_warning("gc channel instance init"); 
     if (!channels_table)
       channels_table = g_hash_table_new (g_int_hash, g_int_equal);
 
@@ -126,7 +143,7 @@ class GC:Sound:Channel from G:Object {
   }
 
   class_init (class) {
-    g_warning("gc channel class init"); 
+    //g_warning("gc channel class init"); 
   }
 
   public GC:Sound:Item *
@@ -142,6 +159,8 @@ class GC:Sound:Channel from G:Object {
       /* get self */
       GCSoundChannel *self;
 
+      //g_warning ("Channel finished %d", channel);
+
       self = GC_SOUND_CHANNEL(g_hash_table_lookup(channels_table, &channel));
 
       if (!self) {
@@ -151,55 +170,94 @@ class GC:Sound:Channel from G:Object {
       self_play_finished (self, self->_priv->playing_item);
     }
 
-  public gboolean
-    real_play (self, GC:Sound:Item *item (check null type))
+   private void real_play ( GC:Sound:Item *item, gpointer data)
     {
-      int i=0;
-      g_warning ("Real play %s", item->nick);
+      //g_warning ("Real play %s", item->nick);
+      GCSoundChannel *self = GC_SOUND_CHANNEL(data);
+
       gchar * filename = gc_sound_item_get_filename(item);
 
-       if (filename == NULL){
-          g_warning("No filename ? no play!");
-          return FALSE;
-          }
+      if (Mix_Playing(self->_priv->channel)){
+         g_warning("Channel busy ? no play!");
+         return;
+         }
 
-         self->_priv->sample=Mix_LoadWAV_RW(SDL_RWFromFile(filename, "rb"), 1);
-         if (!self->_priv->sample) {
-            g_warning("Sample music %s cannot be load", filename); 
-            return FALSE;
-            }
+      if (filename == NULL){
+         g_warning("No filename ? no play!");
+         return;
+         }
 
-          if ((item->volume == -1) || (item->volume >  self->_priv->volume))
-            Mix_VolumeChunk(self->_priv->sample, self->_priv->volume);
-          else
-            Mix_VolumeChunk(self->_priv->sample, item->volume);
+      self->_priv->sample=Mix_LoadWAV_RW(SDL_RWFromFile(filename, "rb"), 1);
+     if (!self->_priv->sample) {
+        g_warning("Sample music %s cannot be load", filename); 
+        return;
+        }
 
-          if (Mix_PlayChannel(self->_priv->channel, self->_priv->sample, 0)==-1) {
-            g_warning (" ? %d",i++);
-            g_warning("Channel cannot play music %s", filename); 
-            return FALSE;
-            }
+     if ((item->volume == -1) || (item->volume >  self->_priv->volume))
+        Mix_VolumeChunk(self->_priv->sample, self->_priv->volume);
+     else
+        Mix_VolumeChunk(self->_priv->sample, item->volume);
 
-          g_warning("Playing %s on channel %d", filename, self->_priv->channel); 
+     if (Mix_PlayChannel(self->_priv->channel, self->_priv->sample, 0)==-1) {
+        g_warning("Channel cannot play music %s", filename);
+        return;
+        }
 
-          self->_priv->playing_item = item;
-          return TRUE;
-    }
+     g_warning("Playing %s on channel #%d", filename, self->_priv->channel);
+
+
+     self->_priv->playing_item = item;
+   }
+
 
   signal first NONE (POINTER)
      void play_finished (self, GC:Sound:Item *item (check null type))
   {
+        //g_warning ("Channel finish item %s", item->nick);
         Mix_FreeChunk(self->_priv->sample);
         self->_priv->sample = NULL;
 
-        gc_sound_item_play_next(item);     
+        gc_sound_item_play_next(item, self->_priv->stopped);
   }
 
-  protected void play_item (self, GC:Sound:Item *item)
+  /* connected to do_play signal of item */
+  protected void do_play (GC:Sound:Item *item, gpointer data)
     {
-      self->_priv->play_list = g_list_append (self->_priv->play_list, item);
+      GCSoundChannel *self = GC_SOUND_CHANNEL(data);
+      GCSoundPolicy policy;
 
-      self_play_first_item(self);
+      /* item policy if it's set */
+      if (gc_sound_item_get_policy(item) == GC_SOUND_POLICY_NONE)
+         policy = self->_priv->policy;
+      else
+         policy = gc_sound_item_get_policy(item);
+
+     //g_warning ("play_item %s with policy %d", item->nick, policy);
+
+      switch (policy) {
+        case GC_SOUND_PLAY_ONLY_IF_IDLE:
+             if (self->_priv->sample || g_list_length (self->_priv->play_list)>0)
+                return;
+             break;
+
+        case GC_SOUND_INTERRUPT_AND_PLAY:
+	  g_list_free (self->_priv->play_list);
+          self->_priv->play_list = NULL;
+          self->_priv->play_list = g_list_append (self->_priv->play_list, item);
+          if (self->_priv->sample){
+             self->_priv->stopped = TRUE;
+             //g_warning("halting channel %d %d", self->_priv->channel, g_list_length(self->_priv->play_list));
+             self_halt(self);
+          }
+          self_run(self);
+          break;
+
+        default:
+                 self->_priv->play_list = g_list_append (self->_priv->play_list, item);
+                 if (!self->_priv->sample)
+                    self_run(self);
+                 break;
+      }
     }
 
   protected void play_first_item(self)
@@ -211,23 +269,53 @@ class GC:Sound:Channel from G:Object {
            self->_priv->playing_root = g_list_first (self->_priv->play_list);
            self->_priv->play_list = g_list_remove_link  (self->_priv->play_list, self->_priv->playing_root);
 
-          self->_priv->signal_id_child = gc_sound_item_connect__play_finished (GC_SOUND_ITEM(self->_priv->playing_root->data), self_item_play_finished, self);
-          ret = gc_sound_item_play_next(GC_SOUND_ITEM(self->_priv->playing_root->data));
+          ret = gc_sound_item_play_next (GC_SOUND_ITEM(self->_priv->playing_root->data), FALSE);
           if (ret)
              return ;          
         }
     }
 
-  private void item_play_finished (GC:Sound:Item *item, gpointer data)
+  private void item_play_finished (GC:Sound:Item *item, gboolean stopped, gpointer data)
     {
-        if (item != GC_SOUND_ITEM(GC_SOUND_CHANNEL(data)->_priv->playing_root->data))
-           return;
-        g_warning("channel item_play_finished on channel %d %s\n", GC_SOUND_CHANNEL(data)->_priv->channel, item->nick);
-        self_play_first_item(GC_SOUND_CHANNEL(data));
+        //g_warning("channel item_play_finished %s %s", item->nick, stopped ? "STOPPED":"normal");
+
+        /* if item our our root item playing */
+        if (item == GC_SOUND_ITEM(GC_SOUND_CHANNEL(data)->_priv->playing_root->data))
+           {
+             GC_SOUND_CHANNEL(data)->_priv->playing_root = NULL;
+             /* do not call run if we are stopping */
+             if (GC_SOUND_CHANNEL(data)->_priv->stopped)
+                GC_SOUND_CHANNEL(data)->_priv->stopped = FALSE;
+             else
+                self_run(GC_SOUND_CHANNEL(data));
+           }
     }
 
   public void connect_me (self, GC:Sound:Item *item )
     {
       gc_sound_item_connect__play_finished(item, self_item_play_finished, self);
-    }    
+      gc_sound_item_connect__do_play(item, self_do_play, self);
+      gc_sound_item_connect__real_play(item, self_real_play, self);
+
+    }
+
+  private signal first NONE (NONE)
+    void run (self)
+      {
+         //g_warning("channel run");
+         self_play_first_item(self);
+      }
+
+  public signal first NONE (NONE)
+    void halt (self)
+      {
+         //g_warning("halting channel %d", self->_priv->channel);
+         Mix_HaltChannel(self->_priv->channel);
+      }
+
+  private signal first NONE (POINTER)
+     void halt_and_play (self, GC:Sound:Item *item )
+      {
+      }
+
 }
