@@ -1,3 +1,14 @@
+2006-11-16  Yves Combe <yves@ycombe.net>
+
+	Added sound policy (play only if iddle, after current, or interrupt and play).
+        Seems works !
+
+	* src/gc_sound/ChangeLog:
+	* src/gc_sound/src/gc-sound-channel.gob:
+	* src/gc_sound/src/gc-sound-item.gob:
+	* src/gc_sound/src/gc-sound-mixer.gob:
+	* src/gc_sound/src/test_gc_sound.c: (finish), (main):
+
 2006-11-15  Yves Combe  <yves@ycombe.net>
 
 	Play loop item/groups.
